# hdl-kgraph

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: analyses.md  benchmarks.md  build-inputs.md  enrichment.md  extraction.md  grammar-bakeoff.md  incremental.md  mcp.md  merge-design.md  releasing.md  review.md  scalability.md  schema-migrations.md  viz-scalability.md
docs/v2/: m11_profiling.md  m12_graph_layer.md  m12_real_design.md  m13_link_spike.md
scripts/: bench_incremental.py  bench_merge.py  bench_query.py  gen_corpus.py  grammar_bakeoff.py  profile_v2.py  spike_m12.py  spike_m12_clocks.py  spike_m13_link.py
src/hdl_kgraph/: __init__.py  __main__.py  config.py  discovery.py  export.py  ids.py  incremental.py  linkbench.py  merge.py  pipeline.py  review.py  schema.py  vcs.py  watch.py
src/hdl_kgraph/cli/: _common.py  _options.py  analyze.py  bench.py  build.py  main.py  merge.py  query.py  render.py  serve.py  tools.py
src/hdl_kgraph/enrich/: __init__.py  _graphutil.py  _profile.py  base.py  ghdl_backend.py  report.py  runner.py  slang_backend.py  stub_backend.py
src/hdl_kgraph/graph/: __init__.py  analysis.py  bounded_link.py  builder.py  clocks.py  lint.py  metrics.py  power.py  summary.py  uvm.py
src/hdl_kgraph/mcp/: __init__.py  server.py  setup.py
src/hdl_kgraph/parser/: __init__.py  base.py  c.py  filelist.py  perl.py  preprocessor.py  python.py  sln.py  sv_normalize.py  systemverilog.py  tcl.py  vhdl.py
src/hdl_kgraph/storage/: __init__.py  ir_codec.py  query.py  sqlite_store.py  summaries.py
src/hdl_kgraph/viz/: __init__.py  aggregate.py  layout.py  template.html
src/hdl_kgraph/viz/static/: LICENSE.d3
tests/: conftest.py  test_aggregate.py  test_analysis_helpers.py  test_bounded_link.py  test_build_filelist.py  test_cli.py  test_cli_exit_codes.py  test_cli_tools.py  test_clock_domains.py  test_cocotb.py  test_config.py  test_dataflow.py  test_discovery.py  test_dpi.py  test_enrich.py  test_enrich_optional.py  test_enrich_profile.py  test_enrich_vhdl.py  test_export.py  test_filelist.py  test_grammar_robustness.py  test_ids.py  test_impact.py  test_incremental.py  test_incremental_equivalence.py  test_ir_codec.py  test_linkbench.py  test_linker.py  test_linker_vhdl.py  test_lint.py  test_mcp_server.py  test_merge_equivalence.py  test_metrics.py  test_parallel.py  test_parser_perl.py  test_parser_sdc.py  test_parser_sln.py  test_parser_sv.py  test_parser_sv_preproc.py  test_parser_tcl.py  (+20 more)
tests/fixtures/: adder.v  alu.vhd  broken.sv  broken.vhd  bus_if.sv  cfg_override.vhd  classes.sv  clog2_cast.sv  constraints.sdc  count_scenario.sln  dataflow.sv  dataflow.vhd  dup_leaf_a.sv  dup_leaf_b.sv  ext_uvm.sv  fifo_case.sv  funcs_tasks.sv  gen_fifo.pl  imports_pkg.sv  lint_case.sv  missing_child.sv  mixed_sv_top.sv  my_pkg.sv  param_generate.sv  prog_block.sv  simple_counter.sv  top.v  top_positional.v  two_clock_cdc.sv  uses_dup.sv  uses_interface.sv  util_pkg.vhd  uvm_tb.sv  verif_constructs.sv  vhdl_for_generate.vhd  vhdl_top.vhd  wildcard_conn.sv
tests/fixtures/cocotb/: counter.sv  test_counter.py
tests/fixtures/dpi/: dpi_impl.c  dpi_impl.cpp  dpi_top.sv
tests/fixtures/preproc/: common.f  prims.v  tb.f
tests/fixtures/preproc/include/: defines.svh
tests/fixtures/preproc/rtl/: fifo.sv  stack.sv  top.sv
tests/fixtures/sdc/: sdc_gated.sdc  sdc_gated.sv  two_clock.sdc
tests/fixtures/sln/: scenario.sln  vs_solution.sln
tests/fixtures/tcl/: flow.tcl
tests/fixtures/upf/: power.upf
