[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdl-kgraph"
dynamic = ["version"]
description = "Knowledge graph extractor for SystemVerilog, Verilog, and VHDL"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Ng Chuan Seng" }]
keywords = [
  "hdl",
  "systemverilog",
  "verilog",
  "vhdl",
  "knowledge-graph",
  "eda",
  "tree-sitter",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Compilers",
]
# Grammar choices: see docs/grammar-bakeoff.md (ROADMAP.md "Risks" #1 and #2).
# The tree-sitter stack is upper-bounded: its API churn is the project's #1
# documented risk (the 0.21 -> 0.23 transition already broke the `Language`
# constructor once), and an uncapped pin would let a future release break
# fresh installs. CI's scheduled `canary` job tests the latest releases and
# gives early warning before the caps are raised.
dependencies = [
  "click>=8.1",
  "networkx>=3.0",
  "tree-sitter>=0.23,<0.26",
  "tree-sitter-systemverilog>=0.3.1,<0.4",
  "tree-sitter-vhdl>=1.5,<2",
  'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
watch = ["watchdog>=4"]
mcp = ["fastmcp>=2"]
# Precomputed-layout tier for `visualize` on large designs (BSD-3; both ship
# pure-pip wheels everywhere). Optional: without it, visualize falls back to
# the in-browser force simulation. See docs/viz-scalability.md.
layout = ["numpy>=1.24", "scipy>=1.10"]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.6",
  "mypy>=1.10",
]
all = ["hdl-kgraph[watch,mcp,layout]"]

[project.scripts]
hdl-kgraph = "hdl_kgraph.cli.main:main"

[project.urls]
Homepage = "https://github.com/chuanseng-ng/hdl-kgraph"
Issues = "https://github.com/chuanseng-ng/hdl-kgraph/issues"
Roadmap = "https://github.com/chuanseng-ng/hdl-kgraph/blob/main/ROADMAP.md"

[tool.hatch.version]
path = "src/hdl_kgraph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hdl_kgraph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
  "tree_sitter.*",
  "tree_sitter_systemverilog.*",
  "tree_sitter_vhdl.*",
  "networkx.*",
  "scipy.*",
  "tomli.*",
  "watchdog.*",
  "fastmcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
