[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdl-kgraph"
dynamic = ["version"]
description = "Knowledge graph extractor for SystemVerilog, Verilog, and VHDL"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Ng Chuan Seng" }]
keywords = [
  "hdl",
  "systemverilog",
  "verilog",
  "vhdl",
  "knowledge-graph",
  "eda",
  "tree-sitter",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Compilers",
]
# Grammar choices: see docs/grammar-bakeoff.md (ROADMAP.md "Risks" #1 and #2).
# The tree-sitter stack is upper-bounded: its API churn is the project's #1
# documented risk (the 0.21 -> 0.23 transition already broke the `Language`
# constructor once), and an uncapped pin would let a future release break
# fresh installs. CI's scheduled `canary` job tests the latest releases and
# gives early warning before the caps are raised.
dependencies = [
  "click>=8.1",
  "networkx>=3.0",
  "tree-sitter>=0.23,<0.26",
  "tree-sitter-systemverilog>=0.3.1,<0.4",
  "tree-sitter-vhdl>=1.5,<2",
  'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
watch = ["watchdog>=4"]
mcp = ["fastmcp>=2"]
# Precomputed-layout tier for `visualize` on large designs (BSD-3; both ship
# pure-pip wheels everywhere). Optional: without it, visualize falls back to
# the in-browser force simulation. See docs/viz-scalability.md.
layout = ["numpy>=1.24", "scipy>=1.10"]
# M7 semantic enrichment (native frontends). Optional: `build --enrich` needs
# these, and the default heuristic build never imports them (they are loaded
# lazily only when enrichment runs). pyslang is the slang SystemVerilog
# frontend binding; pyVHDLModel is the VHDL document model used by the GHDL
# backend. The `ghdl` analyzer binary is a separate system install — not a pip
# package, and only the VHDL backend needs it. Upper-bounded like the
# tree-sitter stack: these are native/compiled wheels whose API can churn.
enrich = ["pyslang>=8,<12", "pyVHDLModel>=0.28,<1"]
# v2 graph-layer spike (M12, #128) — evaluation-only, used solely by
# scripts/spike_m12.py to measure candidate graph backends, never by the package
# or the test suite. rustworkx and kuzu are native/compiled wheels, so they are
# upper-bounded like the other native deps.
spike = ["rustworkx>=0.14,<1", "kuzu>=0.6,<1"]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.6",
  "mypy>=1.10",
]
all = ["hdl-kgraph[watch,mcp,layout,enrich]"]

[project.scripts]
hdl-kgraph = "hdl_kgraph.cli.main:main"

[project.urls]
Homepage = "https://github.com/chuanseng-ng/hdl-kgraph"
Issues = "https://github.com/chuanseng-ng/hdl-kgraph/issues"
Roadmap = "https://github.com/chuanseng-ng/hdl-kgraph/blob/main/ROADMAP.md"

[tool.hatch.version]
path = "src/hdl_kgraph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hdl_kgraph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
  "tree_sitter.*",
  "tree_sitter_systemverilog.*",
  "tree_sitter_vhdl.*",
  "networkx.*",
  "numpy.*",
  "scipy.*",
  "tomli.*",
  "watchdog.*",
  "fastmcp.*",
  "pyVHDLModel.*",
  "pyGHDL.*",
]
ignore_missing_imports = true

# pyslang ships bundled .pyi stubs that are not valid Python (e.g. an enum
# member literally named `and`, a keyword), so mypy aborts parsing them. Skip
# following into the package and treat it as untyped — we use it behind the
# `enrich/slang_backend.py` abstraction and validate it at runtime/tests.
[[tool.mypy.overrides]]
module = ["pyslang", "pyslang.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
# Branch coverage (not just line) so the resilience/degradation paths — a
# corrupt-IR fallback, a foreign-DB rebuild, an internal-parser-error catch —
# count toward the gate instead of being half-covered by a line touch (#75).
branch = true
source = ["hdl_kgraph"]

[tool.coverage.report]
# A `...` body, a TYPE_CHECKING import, or an unreachable guard isn't a coverage
# gap worth failing on.
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]
